[gd_scene load_steps=13 format=3 uid="uid://dh1cw2fjg8swg"]

[ext_resource type="Script" uid="uid://2scmjeikq0b0" path="res://recipe_page.gd" id="1_mpmym"]
[ext_resource type="Texture2D" uid="uid://dw6e6bxlxiq4h" path="res://assets/UI books & more.png" id="2_xe7wx"]
[ext_resource type="AudioStream" uid="uid://bmng7t8swpe55" path="res://assets/Sounds/pickPage.wav" id="3_np7rn"]
[ext_resource type="FontFile" uid="uid://qjygu07tk4bf" path="res://font/fot-yuruka-std.ttf" id="4_aeybs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_np7rn"]
atlas = ExtResource("2_xe7wx")
region = Rect2(544, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeybs"]
atlas = ExtResource("2_xe7wx")
region = Rect2(544, 208, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_atd0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_np7rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeybs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3noyy"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_ff2h1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("found_label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-34, -20)]
}

[sub_resource type="Animation" id="Animation_np7rn"]
resource_name = "found_text"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("found_label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-34, -20), Vector2(-34, -25), Vector2(-34, -20)]
}

[sub_resource type="Animation" id="Animation_l6ohn"]
resource_name = "glow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.466667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.639216), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.466667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7321f"]
_data = {
&"RESET": SubResource("Animation_ff2h1"),
&"found_text": SubResource("Animation_np7rn"),
&"glow": SubResource("Animation_l6ohn")
}

[node name="RecipePage" type="Area2D"]
script = ExtResource("1_mpmym")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_atd0y")
frame_progress = 0.334162

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3noyy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7321f")
}

[node name="sparkle_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_np7rn")

[node name="found_label" type="Label" parent="."]
visible = false
offset_left = -34.0
offset_top = -22.0213
offset_right = 40.0
offset_bottom = -10.0213
theme_override_fonts/font = ExtResource("4_aeybs")
theme_override_font_sizes/font_size = 10
text = "Found page!"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
